@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 10, 2010
+.Dd January 21, 2012
 .Dt ATF-C++-API 3
 .Os
 .Sh NAME
@@ -48,6 +48,8 @@
 .Nm ATF_TEST_CASE_BODY ,
 .Nm ATF_TEST_CASE_CLEANUP ,
 .Nm ATF_TEST_CASE_HEAD ,
+.Nm ATF_TEST_CASE_NAME ,
+.Nm ATF_TEST_CASE_USE ,
 .Nm ATF_TEST_CASE_WITH_CLEANUP ,
 .Nm ATF_TEST_CASE_WITHOUT_HEAD ,
 .Nd C++ API to write ATF-based test programs
@@ -71,6 +73,8 @@
 .Fn ATF_TEST_CASE_BODY "name"
 .Fn ATF_TEST_CASE_CLEANUP "name"
 .Fn ATF_TEST_CASE_HEAD "name"
+.Fn ATF_TEST_CASE_NAME "name"
+.Fn ATF_TEST_CASE_USE "name"
 .Fn ATF_TEST_CASE_WITH_CLEANUP "name"
 .Fn ATF_TEST_CASE_WITHOUT_HEAD "name"
 .Sh DESCRIPTION
@@ -170,6 +174,16 @@ and
 macros, all of which take the test case's name.
 Following each of these, a block of code is expected, surrounded by the
 opening and closing brackets.
+.Pp
+Additionally, the
+.Fn ATF_TEST_CASE_NAME
+macro can be used to obtain the name of the class corresponding to a
+particular test case, as the name is internally manged by the library to
+prevent clashes with other user identifiers. Similarly, the
+.Fn ATF_TEST_CASE_USE
+macro can be executed on a particular test case to mark it as "used" and
+thus prevent compiler warnings regarding unused symbols.  Note that
+.Em you should never have to use these macros during regular operation.
 .Ss Program initialization
 The library provides a way to easily define the test program's
 .Fn main
