@@ -191,10 +191,12 @@ ATF_TEST_CASE_HEAD(build_c_o)
 }
 ATF_TEST_CASE_BODY(build_c_o)
 {
+    ATF_TEST_CASE_USE(h_build_c_o_ok);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_c_o_ok) >();
     ATF_REQUIRE(grep_file("stdout", "-o test.o"));
     ATF_REQUIRE(grep_file("stdout", "-c test.c"));
 
+    ATF_TEST_CASE_USE(h_build_c_o_fail);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_c_o_fail) >();
     ATF_REQUIRE(grep_file("stdout", "-o test.o"));
     ATF_REQUIRE(grep_file("stdout", "-c test.c"));
@@ -209,11 +211,13 @@ ATF_TEST_CASE_HEAD(build_cpp)
 }
 ATF_TEST_CASE_BODY(build_cpp)
 {
+    ATF_TEST_CASE_USE(h_build_cpp_ok);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_cpp_ok) >();
     ATF_REQUIRE(grep_file("stdout", "-o.*test.p"));
     ATF_REQUIRE(grep_file("stdout", "test.c"));
     ATF_REQUIRE(grep_file("test.p", "foo bar"));
 
+    ATF_TEST_CASE_USE(h_build_cpp_fail);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_cpp_fail) >();
     ATF_REQUIRE(grep_file("stdout", "-o test.p"));
     ATF_REQUIRE(grep_file("stdout", "test.c"));
@@ -228,10 +232,12 @@ ATF_TEST_CASE_HEAD(build_cxx_o)
 }
 ATF_TEST_CASE_BODY(build_cxx_o)
 {
+    ATF_TEST_CASE_USE(h_build_cxx_o_ok);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_cxx_o_ok) >();
     ATF_REQUIRE(grep_file("stdout", "-o test.o"));
     ATF_REQUIRE(grep_file("stdout", "-c test.cpp"));
 
+    ATF_TEST_CASE_USE(h_build_cxx_o_fail);
     run_h_tc< ATF_TEST_CASE_NAME(h_build_cxx_o_fail) >();
     ATF_REQUIRE(grep_file("stdout", "-o test.o"));
     ATF_REQUIRE(grep_file("stdout", "-c test.cpp"));
